# Dashboard

./: .env  API.md  LICENSE  README.md  doc.html  docker-compose.yml
dashboard_server/: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
dashboard_server/.sqlx/: query-07908021b2ef9a60ec7e964f8d84b065ba1b240d7a1340d8c021eee9f08bef0a.json  query-100c5b0a0c6e57ee0b393d5d2065698870b9b21911353717191dcf97b2812569.json  query-1f612b9033ba9ff47bcfe182f04c913a240359154f13cee1b2e93687b6dd497c.json  query-265ed40603fc93eea75c1224f0861f84fe80bdec794e40649fdbd21b6f165042.json  query-5bc6b0e718317a1696032434034ec373ba271ec00f50d16a244433cf7fb39af3.json  query-65cf729b144f51e0ce4d5104607d0c8f65d1a67b8481210ee720cff3bb8d0f8b.json  query-6d6dedc0183e168c2f4a463643523e3f2952d85b26e6ea4cb247ff12a6a5c56a.json  query-9528c748b768ad6b7f76fab786e89941992124e4617e51f1d97395624ea030a1.json  query-afc5e1b52830fe3c20ae746697977865fa195c61f57013d9ac3fae30fec7ac6f.json  query-b298d03c43f37fac352d43e5eb769ed7c458d1613540dd1517eeab4b32daadcb.json  query-c78940ed7855b38fe9354fa7047815107b5907efc5a77cbd760b9b80a294205f.json  query-d5a95a59846153893685a1a386011110a5e111bf715e8115b970432ea8d0ca1b.json  query-e3277627813cc3811fee8deee5f88159bada741dea566b5e5265a10d095f7524.json
dashboard_server/migrations/: 20231019225936_users.up.sql  20231019225944_roles.down.sql  20231019225944_roles.up.sql  20231019225948_systems.down.sql  20231019225948_systems.up.sql  20231019225952_systemaccess.down.sql  20231019225952_systemaccess.up.sql  20231019231451_relations.down.sql  20231019231451_relations.up.sql  20231102202356_devicestructure.down.sql  20231102202356_devicestructure.up.sql  20231102202400_devicedata.down.sql  20231102202400_devicedata.up.sql  (+8 more)
(+64 files in other folders)
