[package]
name = "dashboard_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-identity = "0.6.0"
actix-session = { version = "0.8.0", features = ["cookie-session"] }
actix-web = "4.4.0"
dotenv = "0.15.0"
env_logger = "0.10.0"
rust-argon2 = "2.0.0"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
sqlx = { version = "0.7.2", features = ["runtime-tokio", "postgres"] }
uuid = { version = "1.5.0", features = ["serde", "v4"] }
